--- a/style.css
+++ b/style.css
@@ -3,20 +3,23 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
 }
+
 
 body{
     background-color: #4287f5;
 }
+
 .container{
     margin: 10px auto;
     background-color: #4287f5;
     width: 50%;
 }
+
 .fas{
     color: #0242a8;
 }
+
 .input{
     background-color: #49648f;
     padding: 20px;
@@ -26,6 +29,7 @@ body{
     -moz-box-shadow: 2px 2px 14px -2px rgba(0,0,0,0.92);
     box-shadow: 2px 2px 14px -2px rgba(0,0,0,0.92);
 }
+
 input{
     padding: 12px;
     border: none;
@@ -39,10 +43,14 @@ button{
     padding:12px;
     background-color: #0242a8;
     color:#d1e3ff;
+    border-radius: 10px;
+    cursor: pointer;
 }
+
 .visible{
     display: inline;
 }
+
 .invisible {
     display: none;
 }
@@ -51,14 +59,39 @@ button{
     margin: 40px 0;
 }
 
+
+.list-item {
+    background-color: snow;
+    padding: 20px;
+    border-radius: 5px;
+
+    -webkit-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.75);
+}
+
 li{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     margin: 10px;
+    cursor: move;
+}
+
+li.hint{
+    background-color: yellow;
+
+}
+
+li.active {
+    background-color: lawngreen;
 }
 
 li div{
     font-size: 1.5rem;
-    color: white;
+    color:#49648f;
+}
+
+#delete{
+    background-color: #b30c1d;
 }
